# extend_KnowOrNot

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  diff.txt  federalist_10.txt  pyproject.toml
docs/: create_experiment.md  create_questions.md  evaluate.md  quickstart.md  run_experiment_sync.md  total.md
example/: quickstart_pipeline.py  space_1.txt  use_azure.py  use_gemini.py  use_openai.py
generated_facts/: BTT_10.json  BTT_11.json  BTT_12.json  BTT_13.json  BTT_14.json  BTT_15.json  BTT_16.json  BTT_17.json  BTT_18.json  BTT_19.json  BTT_2.json  BTT_20.json  BTT_21.json  BTT_22.json  BTT_23.json  BTT_24.json  BTT_25.json  BTT_26.json  BTT_27.json  BTT_28.json  BTT_29.json  BTT_30.json  BTT_31.json  BTT_32.json  BTT_33.json  BTT_34.json  BTT_35.json  BTT_36.json  BTT_37.json  BTT_38.json  BTT_39.json  BTT_4.json  BTT_40.json  BTT_41.json  BTT_42.json  BTT_43.json  BTT_44.json  BTT_45.json  BTT_46.json  BTT_47.json  (+49 more)
run/: federalist_10.txt  run_script.py  test_openai.py
run/data/: BTT_10.txt  BTT_11.txt  BTT_12.txt  BTT_13.txt  BTT_14.txt  BTT_15.txt  BTT_16.txt  BTT_17.txt  BTT_18.txt  BTT_19.txt  BTT_2.txt  BTT_20.txt  BTT_21.txt  BTT_22.txt  BTT_23.txt  BTT_24.txt  BTT_25.txt  BTT_26.txt  BTT_27.txt  BTT_28.txt  BTT_29.txt  BTT_3.txt  BTT_30.txt  BTT_31.txt  BTT_32.txt  BTT_33.txt  BTT_34.txt  BTT_35.txt  BTT_36.txt  BTT_37.txt  BTT_38.txt  BTT_39.txt  BTT_4.txt  BTT_40.txt  BTT_41.txt  BTT_42.txt  BTT_43.txt  BTT_44.txt  BTT_45.txt  BTT_46.txt  (+48 more)
src/knowornot/: __init__.py  system_prompts.yaml
src/knowornot/DataLabeller/: __init__.py
src/knowornot/DataManager/: __init__.py  models.py
src/knowornot/Evaluator/: __init__.py
src/knowornot/ExperimentCategories/: __init__.py  basic_rag.py  direct_experiment.py  hyde_rag.py  long_in_context.py
tests/: test_azure_initialisation.py  test_datamanager.py  test_experimentcategories.py  test_knowornot.py  test_question_extractor.py  test_syncllmclient.py  test_syncllmclient_integration.py  test_synllmclient.py  test_syntheticexperimentcreator.py
usage/: quickstart_pipeline.py  space_2.txt  use_azure.py  use_gemini.py  use_openai.py
(+27 files in other folders)
