[project]
name = "knowornot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "pradyuprasad", email = "pradyu.sp@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "isort>=6.0.1",
    "openai>=1.70.0",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.2",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.398",
]
