[project]
name = "knowornot"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "pradyuprasad", email = "pradyu.sp@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.2.0",
    "google-generativeai>=0.8.5",
    "instructor>=1.7.9",
    "isort>=6.0.1",
    "jsonref>=1.1.0",
    "nltk>=3.9.1",
    "numpy>=2.2.4",
    "openai>=1.70.0",
    "groq>=0.30.0",
    "anthropic>=0.25.0",
    "boto3>=1.34.113",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.2",
    "pyright>=1.1.400",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "statsmodels>=0.14.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []
